# FDUA_Challenge_4th_2026

./: .gitignore  README.md  main.py  pyproject.toml
02_output/20260123/: 12044.docx  141634.docx  184226.docx  244359.docx  292640.docx  308582.docx  325042.docx  71768.docx  73617.docx  99702.docx  prompt_log.docx  verification_process_report.docx
02_output/20260124/: 12044.docx  141634.docx  184226.docx  244359.docx  292640.docx  308582.docx  325042.docx  71768.docx  73617.docx  99702.docx  prompt_log.docx  verification_process_report.docx
02_output/20260126/: prompt_log.docx  verification_process_report.docx
02_output/20260128/: 12044.docx  141634.docx  184226.docx  244359.docx  292640.docx  308582.docx  325042.docx  71768.docx  73617.docx  99702.docx  prompt_log.docx  verification_process_report.docx
02_output/20260201/: 12044.docx  141634.docx  184226.docx  244359.docx  292640.docx  308582.docx  325042.docx  71768.docx  73617.docx  99702.docx  prompt_log.docx  verification_process_report.docx
02_output/20260211/: CSVデータ確認用.xlsx  第四回金融データ活用チャレンジ_20260211_1.csv  第四回金融データ活用チャレンジ_20260211_2.csv  第四回金融データ活用チャレンジ_20260211_3.csv
02_output/参考資料用/: 12044_財務分析レポート.docx  141634_財務分析レポート.docx  184226_財務分析レポート.docx  244359_財務分析レポート.docx  292640_財務分析レポート.docx  308582_財務分析レポート.docx  325042_財務分析レポート.docx  71768_財務分析レポート.docx  73617_財務分析レポート.docx  99702_財務分析レポート.docx
03_notebook/: [EDA]FDUA_4th.py  第四回金融データ活用チャレンジ.ipynb
