[project]
name = "fdua-challenge-4th-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
